29年春組み込み

--- a/AppliedInformation/午後/H29S.md
+++ b/AppliedInformation/午後/H29S.md
@@ -77,5 +77,70 @@ e:インターネット
 
 ## 組み込みシステム スマートウォッチ
 
-``` txt
+後2問は正解したかった。  
+難易度的にはかなり優しい。  
+計算問題もクソみたいな問題しか無かったし。  
+
+ただ、表現の問題が少し難しい。  
+複数の言い回しが可能だから。  
+
+``` txt : 30分 7/10
+エ
+16
+画面入力
+画面表示
+音声入力
+画面作成
+機能選択画面 × メールの内容
+メール表示 × 機能選択画面
+割込み × 優先度
+表示される情報が違う 100%
+→ 複数画面が混在表示される
+
+
+
+ウォッチがフォンからメール受信通知を受信した直後に、利用者がウォッチのタッチパネルをタッチした場合を想像します。
+〔ウォッチの動作仕様〕から、ウォッチがフォンからメール受信通知を受信した場合は、受信したメールの内容をウォッチに表示することがわかります。
+また、タッチパネルをタッチした場合は、機能選択画面を表示します。
+
+これらのことから、何の対策も講じていなければ、ウォッチがフォンからメール受信通知を受信した直後に、
+利用者がウォッチのタッチパネルをタッチをすると、受信したメールの内容を確認する前に機能選択画面に切り替わってしまうことがわかります。
+本問のウォッチでは、これを避けるために、各割込みハンドラの起動時にタッチ操作割込みをマスク（受付無効に）し、メインタスクが適切なタイミングで解除する仕様になっています。
+
+よって、eには「メールの内容」、fには「機能選択画面」が入ります。
+
+∴e＝メールの内容
+f＝機能選択画面
+
+→
+逆だった。
+解説の通りに考えれば、確かに逆だ。
+俺は先にタッチパネルを操作している時に受信したらって考えていたから、この思考から抜け出せなかった。
+メールの内容に関しては部分点くらいはもらえるのでは無かろうか。
+
+
+
+[g]
+表2より、画面表示タスクは「画面情報の内容を基に、画面の更新を行う」ことがわかります。
+また、画面作成タスクは「メインタスクから受けた情報を基に、表示画面を作成し、画面情報に書き込む。」とあり、画面情報を更新します。
+
+画面表示タスクと画面作成タスクは並行して実行されるため、画面表示タスクを実行中に画面作成タスクが動作すると、画面表示タスクは、
+画面作成タスクによって書込み中のメモリから画面情報を読み出すことになります。
+このときメモリには更新前と更新後の画面情報が混在することになるので、ウォッチの画面には複数画面が混在表示されることになります。
+
+この問題を解決するためには、それぞれのタスクに優先度を付けて、画面表示タスクを実行中に画面作成タスクを動作しないようにする必要があります。
+これらのことから、gは「優先度」、"現象"は「複数画面が混在表示される」が適切です。
+
+∴g＝優先度
+　現象：複数画面が混在表示される
+
+→
+「表示される情報が違う」で100％判定もらったけど怪しいものである。
+画面が変になるのだろうなとは思っていたが、それがどういうものかズバリ答える事が出来なかった。
+gについては、「割り込み」か「マスク」しか頭になかったが、プリエンプション型なので、優先度であるべきだった。
+
+プリエンプションは割り込み型。
+タイムクオンタムや優先度によってディスパッチやプリエンプションで現在のタスクを切り替える。
+割り込みだから優先度とみて問題はないだろう。
+並行実行という点でどちらを優先すべきかという発想は普通に考えればどうだとしか思えない。
 ```
