ちょっとした

--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -305,8 +305,9 @@ vue デバッグ
 
 [「なぜDI(依存性注入)が必要なのか？」についてGoogleが解説しているページを翻訳した](https://qiita.com/mizunowanko/items/53eed059fc044c5aa5dc)  
 
-
-・ボタン押したらPOST通信するだけの簡単なツールを作ってみたい
+・ボタン押したらPOST通信するだけの簡単なツールを作ってみたい  
+C# send post
+<https://www.delftstack.com/ja/howto/csharp/csharp-post-request/>  
 
 ・order by then by
 LINQ OrderBy 複数
