--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -694,6 +694,8 @@ LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件
 撮影者が行方不明などになったため、埋もれていた映像という設定のフィクション作品。  
 撮影者と無関係な者の手に渡り、そのまま公開されることになったという設定でもある。  
 
+・立替
+③ 他の人に代わって代金や物品を出しておく。他人が出すべき金銭を代わりに支払う。
 
 
 
