・データベース午後3問 ・ヒューマンインターフェース、マルチメディア、ソフトウェア開発技術午前まとめ

--- a/AppliedInformation/午後/H27A.md
+++ b/AppliedInformation/午後/H27A.md
@@ -1,1 +1,36 @@
 # 平成27年秋期
+
+---
+
+## セキュリティ
+
+---
+
+## データベース 人事情報のデータ構造
+
+いやー、久しぶりに敗北した。  
+全体的に話は分かったけど、納得の行く答えに絞れなかった。  
+再帰の問題は難しい。  
+itecの問題にあったからやったけど、やっておいてよかった。  
+
+``` txt : 30分 3/9
+→
+部署ID
+上位部署ID
+
+第2正規形 × 第1正規形
+年月日の情報は所属部署IDに紐づく情報で分離できるから ×
+例)・主キーの一部に関数従属している属性があるから
+   ・主キーに部分従属している属性があるから
+   ・社員IDだけに従属している属性があるから
+{社員ID}、{所属部署ID}、(適用開始年月日)、適用終了年月日
+→{社員ID}、{適用開始年月日}、適用終了年月日、所属部署ID
+
+= 部署.部署ID × IS NULL
+2014-04-01 × 2012-10-01
+9999-12-31 × 2014-03-31
+```
+
+---
+
+## 組込みシステム
