--- a/AppliedInformation/午後/H29S.md
+++ b/AppliedInformation/午後/H29S.md
@@ -98,6 +98,14 @@ e:インターネット
 → 複数画面が混在表示される
 
 
+1秒間当たりのデータサイズ[バイト] ＝ チャネル数 × サンプリング周波数[Hz] × 量子化ビット数[バイト]
+
+この設問では、チャネル数＝1、サンプリング周波数は「8kHz＝8,000Hz」、量子化ビット数は「16ビット＝2バイト」です。これを式に当てはめると、
+
+　1×8,000Hz×2バイト＝16,000バイト
+＝16kバイト
+
+
 
 ウォッチがフォンからメール受信通知を受信した直後に、利用者がウォッチのタッチパネルをタッチした場合を想像します。
 〔ウォッチの動作仕様〕から、ウォッチがフォンからメール受信通知を受信した場合は、受信したメールの内容をウォッチに表示することがわかります。
