ダーティーリードとか

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -637,38 +637,47 @@ WHERE
 
 ---
 
+## ダーティリード、ファントムリードと分離レベル
+
+[トランザクション分離レベルについてのまとめ](https://qiita.com/song_ss/items/38e514b05e9dabae3bdb)  
+[[RDBMS][SQL]トランザクション分離レベルについて極力分かりやすく解説](https://qiita.com/PruneMazui/items/4135fcf7621869726b4b)  
+
+READ UNCOMMITTED
+
+---
+
 ## 著作権
 
 <https://cozylaw.com/copyright/ippun/>  
 
-1. 人が心で思ったことをその人らしく表現したものを著作物といいます。小説・音楽・絵画・地図・映画・写真など文化の発展のために大切なものです。
+人が心で思ったことをその人らしく表現したものを著作物といいます。小説・音楽・絵画・地図・映画・写真など文化の発展のために大切なものです。
 ☆著作物とは？
 
-2.　著作物をつくった人を著作者といい、著作者は著作物の利用を独占できる著作権という権利を持っています。
+著作物をつくった人を著作者といい、著作者は著作物の利用を独占できる著作権という権利を持っています。
 ☆著作権はどのように生まれる？
 
-3.　著作権は、著作物の複製（コピー）を独占できる複製権などのような、いろいろな権利の集まりです。
+著作権は、著作物の複製（コピー）を独占できる複製権などのような、いろいろな権利の集まりです。
 ☆著作権は権利の束
 
-4.　他人の著作物を利用したいときには、著作権を持っている人から利用の許諾をもらってください。
+他人の著作物を利用したいときには、著作権を持っている人から利用の許諾をもらってください。
 ☆著作権による利用の制限
 
-5.　許諾を受けないで他人の著作物を利用することは著作権の侵害であり、利用行為の停止や損害の賠償を請求されることがあります。
+許諾を受けないで他人の著作物を利用することは著作権の侵害であり、利用行為の停止や損害の賠償を請求されることがあります。
 ☆著作権侵害の民事責任
 
-6.　著作権を侵害すると刑罰が科されることがあります。
+著作権を侵害すると刑罰が科されることがあります。
 ☆著作権侵害の刑事責任
 
-7.　しかし例外として、許諾を受けずに著作物を利用できる場合があります。
+しかし例外として、許諾を受けずに著作物を利用できる場合があります。
 ☆利用制限の例外
 
-8.　著作権には寿命があり、原則として著作者が亡くなってから70年で権利が消滅します。（例外もあります）
+著作権には寿命があり、原則として著作者が亡くなってから70年で権利が消滅します。（例外もあります）
 ☆著作権保護期間
 
-9　著作者は、著作者の人格を守るために著作者人格権という権利も持っています。
+著作者は、著作者の人格を守るために著作者人格権という権利も持っています。
 ☆著作者人格権
 
-10.　実演家（歌手や俳優）やレコード製作者、放送事業者には著作隣接権という権利があり、著作権に準じる保護を受けています。
+実演家（歌手や俳優）やレコード製作者、放送事業者には著作隣接権という権利があり、著作権に準じる保護を受けています。
 ☆著作隣接権
 
 ## 雑記
@@ -697,17 +706,19 @@ LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件
 ・立替
 ③ 他の人に代わって代金や物品を出しておく。他人が出すべき金銭を代わりに支払う。
 
+ねむ。
+というか、ウクライナ情勢気になりすぎて仕事にならん。
+でも、万に一つの望みもないだろうな。
 
+昼休みは福田さんと保育園に出す書類の件で突き合わされた。
+福田さんも不満たらたらだった。
+廣瀬さんは仕事辞めたらしい。
+終わりの始まりって感じ。
 
+久しぶりに寝れなかった。
+体が熱かった。
+それほど筋肉痛になっていない。
+昨日のはただ疲れただけか。
 
-やっぱり2連休中にもトラブっていた模様。
-触らぬ神に祟りなし。
-本番には関わらず、バグの修正だけやっていたいものだ。
-
-パソコンと確定申告終わったから頭が少し軽い。
-荷物の出荷も終わった。
-後は・・・、また買い物だな。
-次はケーブルとエアリズムか・・・。
-先は長い。
-
-
+社長に確認しに行けたのがよくやったポイントかな。
+後は笹田さんと色々仕様を詰めることができたことかな。
