按分、ブランチ名、

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -706,19 +706,27 @@ LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件
 ・立替
 ③ 他の人に代わって代金や物品を出しておく。他人が出すべき金銭を代わりに支払う。
 
-ねむ。
-というか、ウクライナ情勢気になりすぎて仕事にならん。
-でも、万に一つの望みもないだろうな。
+プロジェクトの火消しばかりで、技術的に枯れてしまうから。
+楽しくないから。つまらないから。飽きたから。
 
-昼休みは福田さんと保育園に出す書類の件で突き合わされた。
-福田さんも不満たらたらだった。
-廣瀬さんは仕事辞めたらしい。
-終わりの始まりって感じ。
 
-久しぶりに寝れなかった。
-体が熱かった。
-それほど筋肉痛になっていない。
-昨日のはただ疲れただけか。
+3月休み少ない。やばい。
+9日で残りの午後問題行けるか？
+まぁ、やるしかないけど。
 
-社長に確認しに行けたのがよくやったポイントかな。
-後は笹田さんと色々仕様を詰めることができたことかな。
+[gitのローカルのブランチ名を変更したい](https://qiita.com/suin/items/96c110b218d919168d64)
+
+
+人単位で消費税。
+人単位で消費税。
+それを合計方式で許可もらった。
+2.23が根拠ではある。
+
+3.0では按分はない。
+だからこうなるらしい。
+
+全体で合計した場合は1467。
+人で合計した場合は1466。
+この差額の1円を代表者につける必要がある。
+けど～～～って話。
+
