27年春データベースごご

--- a/AppliedInformation/午後/H27S.md
+++ b/AppliedInformation/午後/H27S.md
@@ -2,6 +2,67 @@
 
 ---
 
+## データベース アクセスログ監視システムの構築
+
+特にむずかしさは感じなかったが、細かいところでわからないところはあったのでしっかり詰める。  
+・参照制約はどちら側に設定するものなのか  
+・クエリの否定は `!=` か `<>`か  
+
+>試験で使用するデータベース言語は，次の仕様に従う。
+SQL ：JIS X 3005 規格群
+
+JIS X 3005-2:2015を見ると、不等号演算子としては「<>」のみ定義されていますので、厳密に言えば不正解となります。ただ、DBMS製品では「!=」を許容しているものが多いようですので採点上正解にしている可能性もあります。試験では「<>」と記述した方が無難です。
+
+``` txt : 29分 8/8
+→
+絶対パス名 × フォルダパス名
+
+EXISTS
+NS.非営業年月日 = AC.操作年月日
+
+AC.操作結果 = 'F'
+US.部署ID != SV.部署ID × US.部署ID <> SV.部署ID (※順不同)
+
+ウ
+利用者、アクセスログテーブル間の利用者ID列の参照制約を解除する 100%
+他)アクセスログ表の利用者ID列に定義された参照制約を削除する (29文字)
+
+
+[b]
+文面に明確な答えがなかったので、パスって言葉を入れたけど、惜しかった。
+着眼点問題無かった。
+部分点くらいはもらえるだろう。
+
+→
+本文中のファイルサーバの運用の箇条書きには「ファイルサーバのフォルダごとに社外秘や部外秘などの機密レベルが設定されている」とあります。機密管理エンティティは、サーバごとフォルダごとに存在することになりますが、属性としてはサーバを特定するサーバIDしかありません。よって、フォルダに関する情報を属性に含める必要があります。
+
+ここで「フォルダ名」とする解答案が考えられますが、単なる「フォルダ名」では、"/aaa/bbb"と"/ccc/bbb"などのように別の階層に存在する同一名称のフォルダの区別がつかないため、フォルダを正確に示すには（絶対）フォルダパスでなければなりません。問題文中には、アクセスログには「操作対象のファイルの絶対パス名」が記録されると説明されています。アクセスログとフォルダの機密レベルを紐付けるには、やはりフォルダのパス名が必要です。したがって、[b]には「フォルダパス名」などが当てはまります。
+
+[f]
+やることはわかったけど、!=か<>か度忘れした。
+SQLの標準的には <> らしいので、覚えていこう。
+というか、日常的に <> 使ってなかったっけ？
+それすら思い出せない。明日試そう。
+
+[4,2]
+参照制約だろうなーとは思っていたが、どっちに設定されているものなのかわからなかった。
+マスター側ではないほうに設定する模様。
+というか、冷静に考えたらそうなるよな。
+疲れてるのかな。
+
+→
+
+テーブル定義の変更は(1)の問題を解消するための対応です。
+整合性維持の観点から考えると、通常は参照制約違反となる値を許すことはありませんが、今回はアクセスログという特性上、不正な操作を含め全ての操作を記録しなくてはならないので、利用者表の利用者ID列に存在しない値をも受け入れるような設計が求められます。
+
+行の挿入に失敗するのは参照制約が原因なのですから、アクセスログ表の利用者ID列の参照制約（REFERENCES制約）を削除すれば、この問題を解消できます。
+ちなみに、参照制約を削除するにはALTER TABLE文＋DROP文を使います。
+
+∴アクセスログ表の利用者ID列に定義された参照制約を削除する
+```
+
+---
+
 ## 組み込みシステム 自動車用衝突被害軽減ブレーキシステム
 
 うーん・・・半分か。  
