ネットワーク4問、アーキテクチャ1問

--- a/AppliedInformation/午後/H27S.md
+++ b/AppliedInformation/午後/H27S.md
@@ -5,13 +5,17 @@
 ## データベース アクセスログ監視システムの構築
 
 特にむずかしさは感じなかったが、細かいところでわからないところはあったのでしっかり詰める。  
+
 ・参照制約はどちら側に設定するものなのか  
+→マスターを参照する側に付ける  
+
 ・クエリの否定は `!=` か `<>`か  
-
->試験で使用するデータベース言語は，次の仕様に従う。
-SQL ：JIS X 3005 規格群
-
-JIS X 3005-2:2015を見ると、不等号演算子としては「<>」のみ定義されていますので、厳密に言えば不正解となります。ただ、DBMS製品では「!=」を許容しているものが多いようですので採点上正解にしている可能性もあります。試験では「<>」と記述した方が無難です。
+→  
+>試験で使用するデータベース言語は，次の仕様に従う。  
+>SQL ：JIS X 3005 規格群  
+>
+>JIS X 3005-2:2015を見ると、不等号演算子としては「<>」のみ定義されていますので、厳密に言えば不正解となります。  
+>ただ、DBMS製品では「!=」を許容しているものが多いようですので採点上正解にしている可能性もあります。試験では「<>」と記述した方が無難です。  
 
 ``` txt : 29分 8/8
 →
