--- a/AppliedInformation/午後/H28A.md
+++ b/AppliedInformation/午後/H28A.md
@@ -1,5 +1,96 @@
 # 平成28年秋期
 
+---
+
+## ネットワーク IP電話の導入
+
+計算問題は全部合っていたが、それ以外は全滅だった。  
+せめて記述は正解したかった。  
+喉のところまで来てるんだけど、それをうまく表現できなかった感じ。  
+
+てか、計算問題全部あっていたのは割とすごいのでは？  
+アーキテクチャのせいで通信速度等の問題を見ると拒否反応を出すくらいだからな。  
+巧妙にbyteとbit,メガとギガの変換を挟んできやがったが何とかなった。  
+
+図解に関しては回答用紙がないとさっぱりわからない。  
+でもまぁ、考え的にはいいとこいってたと思う。  
+
+``` txt : 30分 6/9
+[1]
+218
+50
+87.2
+10
+2872
+3
+
+[2]
+ポートでの設定より容易なため 0%
+→ポート番号は動的に決定されるから
+
+送信元 10.141.0.0/16
+送信先 10.21.0.0/16
+送信元IPアドレス | サブネット  | 宛先IPアドレス | サブネット
+10.21.0.0        | 255.255.0.0 | 10.141.0.0     | 255.255.0.0
+10.141.0.0       | 255.255.0.0 | 10.21.0.0      | 255.255.0.0
+
+[3]
+データ転送の優先度を考慮する必要がない 0%
+→IP電話機間の通信は他の通信の影響を受けない
+
+---
+[2][1]
+本文中に「RTPで使用するポート番号は，SIPサーバからの呼制御時に動的に値が割り当てられる」とあり、ポート番号はその都度異なることがわかります。
+たとえポート番号が動的に割り当てられるとしても、その割当て範囲をSIPサーバに設定し、それをもとにフィルタリングできそうですが、P社のルータは範囲によるポート番号の指定ができません。
+この2つの理由からポート番号での優先度制御は不可能であると判断できます。
+
+∴ポート番号は動的に決定されるから
+
+→
+ポートが動的に設定されると言っている箇所を見落としていた。
+直近にある問題文ばかりに目がいって、「設定大変何だなー」としか思っていなかった。
+でも、普通に考えてポート何て毎回変わるものだよな。
+ネットワークにおける常識を持てば普通に答えられる問題何だろうなぁ。
+
+
+[2][2]
+音声の途切れや遅延が発生するのはRTP通信が輻輳の影響を受けた場合です。
+図1「IP電話機とSIPサーバの関係」および本文中の説明から、RTP通信はSIPサーバを介さずに電話機同士で直接が行われていることがわかります。
+このため、それぞれの拠点のIP電話機が配置されているセグメント間の通信だけ優先度を高く設定すればRTP通信を優先させることができます。
+
+本社のIP電話機が設置されているセグメントは「10.21.0.0/16」、支社のIP電話機が設置されているセグメントは「10.141.0.0/16」なので、
+本社から支社への通信
+[送信元]
+IPアドレス：10.21.0.0，サブネットマスク：255.255.0.0
+[宛先]
+IPアドレス：10.141.0.0，サブネットマスク：255.255.0.0
+支社から本社への通信
+[送信元]
+IPアドレス：10.141.0.0，サブネットマスク：255.255.0.0
+[宛先]
+IPアドレス：10.21.0.0，サブネットマスク：255.255.0.0
+以上の2つが高い優先度を設定すべき通信になります。
+
+<https://www.ap-siken.com/kakomon/28_aki/img/pm05_4.gif>
+
+
+
+[3]
+IP電話機は各拠点内の1つのセグメントにまとめて配置されています。
+このためIP電話機間のRTP通信は、L2SWによって同じセグメント内の適切なIP電話機に転送されることになります。
+これは拠点内のRTP通信がそのセグメント内だけで完結し、ルータを経由しないことを意味します。
+したがってルータへの優先度設定は不要です。
+また輻輳の原因となる帯域不足ですが、P社の拠点内のLANは100Mビット／秒なのでIP電話を50通信同時接続しても問題ないと考えられます。
+
+∴IP電話機間の通信は他の通信の影響を受けない
+
+→
+せめて「ルーターの優先度設定の必要がない」って言い回しにすべきだったな。
+それにしても、どうしてQoSを考慮する必要があるかと言えば、許容量以外にも、通信の影響を受けるって可能性があるからクオリティを確保しようとするわけだよな。
+```
+
+---
+
 ## データベース ネットショップの会員管理
 
 話はわかったけど、勘違いして時間がかかってしまった。  
