--- a/AppliedInformation/午後/H28S.md
+++ b/AppliedInformation/午後/H28S.md
@@ -4,6 +4,36 @@
 
 ---
 
+## ネットワーク スイッチ間の接続経路の冗長化
+
+簡単。  
+口で説明できるくらいの余裕があれば問題ないと思われる。  
+外した1問も表現の問題で言いたいことは間違っていない。
+
+``` txt : 25分 9/10
+[1]
+オ
+ア
+ク
+カ
+
+[2]
+VLAN10のポートIDにp10を追加 100%
+他)p10にVLAN10を設定する
+
+[3]
+部署2サーバ
+VLAN20からのアクセスとみなされるため 0%
+→PC1と部署1サーバが所属するVLANが異なるから
+VLAN10
+VLAN20
+
+[4]
+イ、ウ
+```
+
+---
+
 ## データベース コンビニエンスストアにおけるデータウェアハウス構築及び分析
 
 ---
