--- a/BasicInformation/午前/1.テクノロジ系/12.システム開発技術.md
+++ b/BasicInformation/午前/1.テクノロジ系/12.システム開発技術.md
@@ -643,12 +643,15 @@ Trueの先だけに命令があれば、Trueのルートだけ検証して、Fal
 令和元年秋期　問47
 埋め込まれたエラー数をS，埋め込まれたエラーのうち発見されたエラー数をm，埋め込まれたエラーを含まないテスト開始前の潜在エラー数をT，発見された総エラー数をnとしたとき，S，T，m，nの関係を表す式はどれか。  
 →
+
+``` txt
 $m/S=n−m/T$
 →
 埋め込んだエラー:S | 潜在エラー:T
-　　　　　　　　↓ | ↓
-　　　　　　　　m　| x
-　　　　　発見エラー総数:n
+                ↓ | ↓
+                m  | x
+            発見エラー総数:n
+```
 
 潜在エラーのうちテストで発見されたエラー数 = n－m (発見された総エラー数－埋め込まれたエラーのうち発見されたエラー数)
 
