少しまとめ

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -720,3 +720,55 @@ LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件
 この差額の1円を代表者につける必要がある。
 けど～～～って話。
 
+
+・株が約定されたことを確認する。
+→無事約定されていたが、買った瞬間下がるのは勘弁。
+・筋トレをチェックボックス方式にする。
+→今日のマスト課題。昼休みにやってもいいか。
+・ネットワークのパターンを整理する。
+→思いつくだけでも仕事中にあげる。
+
+
+ネットワークもレギュラー入り。
+パターンをまとめれば対処できるだろう。
+今日はその作業で終わるかな。
+遅番の時間で帰りたいものだ。
+残った時間で午前問題を進めたい。
+
+
+筋トレをチェックボックス化する。
+3月からその方式でやりたいので、今日やらないとね。
+後は、選択式やめるか。
+なんだかんだ書いたほうが楽。
+
+
+今日も少し暴走したな。
+相手が福田さんだからよかったものの、あの態度はさすがにないな。
+
+
+天気がいいので、今日もとっとと飯食って散歩したい。
+
+
+
+
+・ポート番号は動的
+・IPはエンドツーエンド(FromTo)
+・証明書はIPの最終到達点にインストールする
+・FWが防ぐのはIPアドレスとポートの組み合わせ
+・どのDNSサーバーを参照するかの設定はアクセスする機器に対して行う。
+→プロキシがアクセスするなら、設定はプロキシに行う。
+・プロキシの存在に気を付ける(「プロキシを通してアクセスする」などの文言)
+・上りと下りの通信速度の概念
+・他から通信の影響を受けるかどうかという概念
+
+
+
+
+1.セキュリティ
+2.データベース
+3.組込みシステム
+4.ネットワーク
+5.情シス開発
+6.プログラミング or アーキテクチャ
+
+
