ネットワークまとめ

--- a/AppliedInformation/応用情報メモ.md
+++ b/AppliedInformation/応用情報メモ.md
@@ -34,6 +34,15 @@ _
 >あと与えられた文字数に対して短すぎたら、言葉足らずの可能性大ですから注意しましょう。  
 >2020.03.04 19:35  
 
+## 優先順位
+
+1.セキュリティ  
+2.データベース  
+3.組込みシステム  
+4.ネットワーク  
+5.情シス開発  
+6.プログラミング or アーキテクチャ  
+
 ---
 
 ## よくわからないまとめ
