ネットワークH29A

--- a/AppliedInformation/午後/H29A.md
+++ b/AppliedInformation/午後/H29A.md
@@ -72,6 +72,41 @@ AESはDESの後継。
 
 ---
 
+## ネットワーク
+
+髭を抜きながらやったからってことにしたい。  
+3回もこの問題をやるけれど、それでも100点を取れないのはどういうわけか。  
+わかっていないからに他ならない。  
+問題を覚えるだけではダメで、理論からわからないといけないってことだろうな。  
+
+一番最初の問題は何を思ったのかわからない。  
+ひげ抜きながら答えたから見落としたのかも？  
+接続先の認識違い。  
+よく読まないとわからない。  
+
+この問題はほとんどパズル。  
+後は肝心なところをちゃんと読めるかどうか。  
+
+``` txt : 30分 5/10 実質6
+eee × ccc
+aaa
+
+13
+3
+
+8
+13
+相互通信可能な宛先MACアドレス 0%
+→サーバーやFWのMACアドレス 
+
+1,2,3,5,9 × 1,3
+3 × 5
+Forward8 × Forward13
+
+```
+
+---
+
 ## データベース 青果卸売業の取引システム改修
 
 卸売関係の話はよくわからなかったが、キーワードとデータの構造だけに着目すればそれほど難しくはなかったか。  
