少しまとめ

--- a/AppliedInformation/itec/1.情報セキュリティ/セキュリティメモ.md
+++ b/AppliedInformation/itec/1.情報セキュリティ/セキュリティメモ.md
@@ -7,6 +7,10 @@
 〆H29S
 〆R1A
 
+・FWのログには送信元のIPアドレス及びポート番号、宛先のIPアドレス及びポート番号等が記録される。  
+・感染したPCをネットワークから切り離す理由は「他の機器と通信させないため」  
+マルウェアがネットワークを介して感染を広めたり、攻撃のために通信をしたりするものであった場合に、ネットワーク上の他の機器との通信を阻止する目的があります。  
+
 ## 認証
 
 ## 公開鍵証明書(ディジタル証明書)
