--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -680,15 +680,6 @@ READ UNCOMMITTED
 実演家（歌手や俳優）やレコード製作者、放送事業者には著作隣接権という権利があり、著作権に準じる保護を受けています。
 ☆著作隣接権
 
-## 雑記
-
-トーレス・デル・パイネ国立公園
-avalon peninsula canada
-
-LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件となるか。
-結果、3件になるのは確認したが、不安なのでちゃんと確認する。
-
-
 ・scheme
 〔体系的な行動の〕計画、構想
 「枠組み」
@@ -719,4 +710,42 @@ LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件
 人で合計した場合は1466。
 この差額の1円を代表者につける必要がある。
 けど～～～って話。
+
+
+## 雑記
+
+トーレス・デル・パイネ国立公園
+avalon peninsula canada
+
+LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件となるか。
+結果、3件になるのは確認したが、不安なのでちゃんと確認する。
+
+
+
+あかん。なんか疲れたな。
+明らかに睡眠不足。
+7時間睡眠を確保したいなら23時から寝る準備として布団に入っておいたほうがいいだろうな。
+24時きっかりに布団に入っても、寝付くまでに最低30分はかかるだろう。
+それだと、実質6時間睡眠にしかならない。
+24時に布団に入ることはできるようになったので、次のステップに進まないとね。
+
+
+今日はないがしろにしてきた復習を徹底したい。
+後は午前問題を終わらせる。
+それらすべてができれば理想。
+
+Vixは高いけどそれほど株価が下がっているわけではない。
+でも、予測なんてできないから機械的に買うほかないだろう。
+外貨積み立てのキャンペーンは3月いっぱいだった。
+まだ積み立てしててよさそう。
+
+
+
+除雪の兄ちゃんと普通に話せた。
+俺も成長したねぇ。
+
+
+トイレこもってる間に午前問題終わった。
+後は、復習しつつ、ノートにまとめるだけだ。
+これは今日やりたい。
 
