ブロードキャスト、26年秋、29年秋ネットワークの復習

--- a/AppliedInformation/itec/5.ネットワーク/ネットワークメモ.md
+++ b/AppliedInformation/itec/5.ネットワーク/ネットワークメモ.md
@@ -10,6 +10,11 @@
 ・上りと下りの通信速度の概念  
 ・他から通信の影響を受けるかどうかという概念  
 
-・ブロードキャストの目的
+・ブロードキャストの目的  
+ブロードキャスト通信では特定の相手を指定せず、同じネットワークに参加するすべての機器に向けて一斉にデータなどを送信する。  
+→
+例)機器を新たにネットワークに接続してアドレスなどの情報を自動取得する際に、設定情報を持っているサーバを探す場合などに用いられる。  
+全員に送り付けるので「○○さん、いる～？」の確認や「どこかにいるのは分かるんだけど、どこにいるのかシラネ」な場合に活用する通信です。  
+
 ・イーサネットとは？
 ・広域イーサネットとは？
