--- a/AppliedInformation/午後/H29A.md
+++ b/AppliedInformation/午後/H29A.md
@@ -86,6 +86,9 @@ AESはDESの後継。
 
 この問題はほとんどパズル。  
 後は肝心なところをちゃんと読めるかどうか。  
+問題自体はよくできているというか、解いていて面白いと感じるのだが、後半の難易度が跳ね上がるのがね。  
+因みに特別な用語とかは特にない。  
+ブロードキャストの意味をしっかり理解する必要があるくらいで後はパズル。  
 
 ``` txt : 30分 5/10 実質6
 eee × ccc
@@ -102,6 +105,56 @@ aaa
 1,2,3,5,9 × 1,3
 3 × 5
 Forward8 × Forward13
+
+---
+
+[1]
+勘違い。
+顧客Yの環境どおしなのだからaaaとcccの通信になるのは当たり前なんですけどねぇ。
+何を見てeee何てしたんでしょうか。なぞ。
+
+
+[3][2]
+通信制御テーブルの注記に「"any"とは，対象が全てのMACアドレスであることを示す」と説明されています。すなわちブロードキャスト通信です。
+項番9～13のルールでは、物理サーバ#1～3に配置されている顧客Yのサーバ・FWから発せられた(送信元MACアドレスがaaa,bbb,cccの)ブロードキャストフレームが物理サーバ#1～3だけに転送されるように制御をしています。
+同様に、物理サーバ#2,3に配置されている顧客Zのサーバ・FWから発せられた(送信元MACアドレスがddd,eeeの)ブロードキャストフレームは物理サーバ#2,3だけに転送されるように制御しています。
+ブロードキャストを使用し、通信に必要な情報を取得すると言えばARPリクエストが頭に浮かびます。
+同一セグメント間の機器同士がイーサネットフレームを使って通信を行う際には、通信開始に先立ちARPによって送信相手のMACアドレスを取得します。
+これらより、項番9～13によって収集可能となる情報とは、同一顧客内のサーバ・FWのMACアドレスと分かります。
+
+∴サーバやFWのMACアドレス
+
+→
+ブロードキャストの目的は何か？
+通信したい相手のMACアドレスを知るために接続されている全ての機器に対してリクエストを送るのがブロードキャストだよね？
+というわけで、知りたいのは相手のMACアドレスなのだが、この問題においては、サーバーとFWしか出てこないので、それらのMACアドレスと答えればよかったというわけか。
+
+
+[4]
+ここも盛大に勘違いした。
+仮想サーバー#1が物理L2SW#2のポート2番に接続されると思ってた。
+スレでもそう勘違いした人が板らしい。
+しかし問題をよく読んでみると「物理サーバ#1で動作していたAPサーバを物理サーバ#2に自動的に移動させる設定を行った。物理サーバ#2に移動させたAPサーバは仮想L2SW#2の2番ポートに接続する。」と、その通りのことを言っている。
+一字一句照らし合わせてみるとそうとしか言っていないのだが、解いている最中は「物理L2SW#2」なのか「仮想L2SW#2」なのか「物理サーバー#2」なのか見分けが付かなくなってしまった。
+それさえ無ければ[3][2]以外の問題は正解する事ができる問題なのだ。
+落ち着いて、ちゃんとメモしながら解く癖を付けたいところではある。
+
+
+[4][1]
+障害を契機にして顧客YのAPサーバが物理サーバ#2上に移動すると、顧客YのAPサーバ(aaa)・DBサーバ(bbb)が同一物理サーバ上に配置することになります。
+これにより両機器間の通信が物理L2SW#1を経由しなくなるので、通信制御テーブル中の「aaa→bbb」および「bbb→aaa」のルールは適用されなくなります。
+
+したがって項番1および項番3が適切です。
+
+∴1，3
+
+[4][2]
+APサーバが物理サーバ#2に移動したことにより、aaaとbbbの通信は物理L2SW#1を経由しなくなりますが、cccとaaaの通信は故障前と同様に物理L2SW#1を経由します。
+aaaが配置される物理サーバが変わったので、cccからaaaに送出されたフレームの転送先も適切に変更しなければなりません。
+
+cccからaaaへのフレームは項番5のルールで制御されます。
+故障前は物理サーバ#1への転送のために9番ポートに転送(Forward 9)していましたが、移動完了後は物理サーバ#2への転送になります。
+物理L2SW#1のポートのうち物理サーバ#2と接続されているのは13番ポートなので、「項番5」のアクションをForward 9から「Forward 13」に変更する設定を適用します。
 
 ```
 
