--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -697,6 +697,13 @@ READ UNCOMMITTED
 
 [gitのローカルのブランチ名を変更したい](https://qiita.com/suin/items/96c110b218d919168d64)
 
+## 按分
+
+「按分（あんぶん）」とは、「基準値をもとに物品や金銭を分けること」です。  
+
+100%仕事用に軽トラ買った。  
+でも50%、遊びに使ってしまった。  
+そしたら50%分を割り返して、その分の税金を収めるみたいな感じで使うらしい。  
 
 人単位で消費税。
 人単位で消費税。
