・ネットワーク午後5問 ・その他細かいのまとめ

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -646,6 +646,15 @@ READ UNCOMMITTED
 
 ---
 
+## 時々コマンドに付いてる--(Double Dash)って何なの？
+
+[時々コマンドに付いてる--(Double Dash)って何なの？](https://zenn.dev/dowanna6/articles/245df006deee0c)  
+
+結論  
+「--」は「これ以降の入力はオプションではありません」と指定する記号です。  
+
+---
+
 ## 著作権
 
 <https://cozylaw.com/copyright/ippun/>  
@@ -691,33 +700,7 @@ READ UNCOMMITTED
 撮影者が行方不明などになったため、埋もれていた映像という設定のフィクション作品。  
 撮影者と無関係な者の手に渡り、そのまま公開されることになったという設定でもある。  
 
-・立替
-③ 他の人に代わって代金や物品を出しておく。他人が出すべき金銭を代わりに支払う。
-
-## 按分
-
-「按分（あんぶん）」とは、「基準値をもとに物品や金銭を分けること」です。  
-
-100%仕事用に軽トラ買った。  
-でも50%、遊びに使ってしまった。  
-そしたら50%分を割り返して、その分の税金を収めるみたいな感じで使うらしい。  
-
-人単位で消費税。
-人単位で消費税。
-それを合計方式で許可もらった。
-2.23が根拠ではある。
-
-3.0では按分はない。
-だからこうなるらしい。
-
-全体で合計した場合は1467。
-人で合計した場合は1466。
-この差額の1円を代表者につける必要がある。
-けど～～～って話。
-
-
 ## 雑記
 
 トーレス・デル・パイネ国立公園
 avalon peninsula canada
-
