--- a/AppliedInformation/itec/5.ネットワーク/ネットワークメモ.md
+++ b/AppliedInformation/itec/5.ネットワーク/ネットワークメモ.md
@@ -1,14 +1,23 @@
 # 5.ネットワークメモ
 
 ・ポート番号は動的  
+
 ・IPはエンドツーエンド(FromTo)  
+
 ・証明書はIPの最終到達点にインストールする  
+
 ・FWが防ぐのはIPアドレスとポートの組み合わせ  
+
 ・どのDNSサーバーを参照するかの設定はアクセスする機器に対して行う。  
 →プロキシがアクセスするなら、設定はプロキシに行う。  
+
 ・プロキシの存在に気を付ける(「プロキシを通してアクセスする」などの文言)  
+
 ・上りと下りの通信速度の概念  
+
 ・他から通信の影響を受けるかどうかという概念  
+
+・セグメントを分けて考えるという概念。  
 
 ・ブロードキャストの目的  
 ブロードキャスト通信では特定の相手を指定せず、同じネットワークに参加するすべての機器に向けて一斉にデータなどを送信する。  
@@ -17,4 +26,5 @@
 全員に送り付けるので「○○さん、いる～？」の確認や「どこかにいるのは分かるんだけど、どこにいるのかシラネ」な場合に活用する通信です。  
 
 ・イーサネットとは？
+
 ・広域イーサネットとは？
