--- a/AppliedInformation/午後/H30A.md
+++ b/AppliedInformation/午後/H30A.md
@@ -1,8 +1,38 @@
-# H30A
+# 平成30年秋期
 
 ## セキュリティ
 
 ``` txt : 回答
+```
+
+---
+
+## ネットワーク Webシステムの負荷分散と不具合対応
+
+LPIC合格したよなぁ？って感じです。  
+すぐに終わったけど、ミスリードしてた。  
+IPの問題は大丈夫だったけど他がダメですね。  
+
+``` txt : 18分 4/7
+172.16.10.5
+172.16.10.12
+
+netstat × dig or nslookup
+TCPポートを確保できず接続待ち状態が続きタイムアウトする 0%
+→WebサーバからDBサーバへのアクセスがエラーとなった
+タイムアウトエラーになる確率が低下する 0%
+→Webサーバー1～3で再利用できるTCPポート数を増やせること
+
+ア
+LBによる送信元アドレス書き換え機能 100%
+他)送信元のIPアドレスはLBのものになるから
+
+---
+
+[2]
+問題をよく見てみれば、どのようなエラーが発生していると考えられるか？なので、何が原因か？と答えるのは全然違うように思われる。
+もっとよく見れば、普通にこたえられる問題だっただけに非常におしい。
+
 ```
 
 ---
