--- a/AppliedInformation/午後/H30S.md
+++ b/AppliedInformation/午後/H30S.md
@@ -1,4 +1,39 @@
-# 平成30年秋期
+# 平成30年春季
+
+---
+
+## セキュリティ
+
+---
+
+## ネットワーク Webシステムの構成変更
+
+この問題でDNSラウンドロビンを知った。  
+まぁ、8割出来たからいい方ではないか？  
+話は簡単だったので、出来れば正解したかった。  
+部分点くらいはもらえるだろうか。  
+
+``` txt : 29分 8/10
+ラウンドロビン
+IPアドレス
+スレーブ
+
+カ
+ア
+エ
+
+A社WebサイトのURL 100%
+他)Webサイト利用時のURL
+4
+record_data × owner
+宛先IPアドレスが直接Webサーバーを指定している通信をブロックする 0%
+→WebサイトへのアクセスをWAFサービスだけから許可する
+
+---
+
+あぁ、そうか。
+直接アクセスされた場合だけ考えてたけど、WAFからのみ許可して後は不許可にすればいいだけの話か。
+```
 
 ---
 
