--- a/AppliedInformation/午後/H31S.md
+++ b/AppliedInformation/午後/H31S.md
@@ -2,6 +2,35 @@
 
 ---
 
+## ネットワーク 無線LANの導入
+
+この問題のおかげでチャネルとリレーエージェントを知ったんだ。  
+何回もやったおかげで普通にわかるようになってきた。  
+
+``` txt 20分 10/11
+サ
+イ
+キ
+エ
+オ
+
+周波数が同じにならないようにずらして設定する 0%
+→4台のAPに、それぞれ異なる周波数チャネルを設定する
+ア
+a
+b.c,d
+
+L3SW
+ルータ2
+
+---
+
+デフォルトゲートウェイはIPレベルで通信できる機器じゃないとだめ。
+L2SWと書いてあったので、残りの選択肢はルーター2しかない。
+```
+
+---
+
 ## データベース 薬剤管理システムの再構築
 
 まぁ、及第点ってところじゃないですかね。  
