--- a/BookKeeping/用語など.md
+++ b/BookKeeping/用語など.md
@@ -95,6 +95,37 @@
 
 ---
 
+### 立替金
+
+・立替  
+③ 他の人に代わって代金や物品を出しておく。他人が出すべき金銭を代わりに支払う。  
+
+---
+
+## 按分
+
+「按分（あんぶん）」とは、「基準値をもとに物品や金銭を分けること」です。  
+
+100%仕事用に軽トラ買った。  
+でも50%、遊びに使ってしまった。  
+そしたら50%分を割り返して、その分の税金を収めるみたいな感じで使うらしい。  
+
+人単位で消費税。
+人単位で消費税。
+それを合計方式で許可もらった。
+2.23が根拠ではある。
+
+3.0では按分はない。
+だからこうなるらしい。
+
+全体で合計した場合は1467。
+人で合計した場合は1466。
+この差額の1円を代表者につける必要がある。
+けど～～～って話。
+
+
+---
+
 ## 締め とは？
 
 金銭や数量などの合計を出すこと。  
@@ -238,3 +269,5 @@ ECOの収入原簿印刷のアレ。
 個人の家系収入から、支払いを義務ずけられている税金や社会保険料等の非消費支出を察し引いた金額の事。  
 
 ・dispose : 処分する。使い捨て  
+
+---
