・ネットワークほぼ完了 ・他整理等

--- a/AppliedInformation/itec/5.ネットワーク/ネットワークメモ.md
+++ b/AppliedInformation/itec/5.ネットワーク/ネットワークメモ.md
@@ -19,12 +19,19 @@
 
 ・セグメントを分けて考えるという概念。  
 
+・通信経路という概念  
+
+・ロードバランサーがあるWebサーバーは宛先IPアドレスはロードバランサーになる。
+
+・不特定多数と通信するブロードキャスト、マルチキャストは性質上UDPに分類される。
+・TCPはコネクション型で相手との接続を確立してから通信を行う特性があり、不特定多数の相手を宛先とするブロードキャストやマルチキャストができません。  
+
 ・ブロードキャストの目的  
 ブロードキャスト通信では特定の相手を指定せず、同じネットワークに参加するすべての機器に向けて一斉にデータなどを送信する。  
-→
-例)機器を新たにネットワークに接続してアドレスなどの情報を自動取得する際に、設定情報を持っているサーバを探す場合などに用いられる。  
+機器を新たにネットワークに接続してアドレスなどの情報を自動取得する際に、設定情報を持っているサーバを探す場合などに用いられる。  
 全員に送り付けるので「○○さん、いる～？」の確認や「どこかにいるのは分かるんだけど、どこにいるのかシラネ」な場合に活用する通信です。  
 
 ・イーサネットとは？
+→ほぼ有線LANの規格の事
 
 ・広域イーサネットとは？
