--- a/AppliedInformation/午後/H26S.md
+++ b/AppliedInformation/午後/H26S.md
@@ -6,6 +6,83 @@
 
 ---
 
+## ネットワーク サブネットを活用したファイルの保護対策
+
+パズルみたいな問題だったな。  
+またIPの数で間違った。何故だ。  
+
+それ以外は特に何もないかな。  
+機器名を答えよって問題がさっぱりわからないから適当に「認証サーバ」って書いたけどまさか正解だったとは。  
+
+この問題やってて思ったけど、ネットワークはトレンドがあると思う。  
+IPの最大数とかIEEE802.1Xとか直近で出た問題を何回か繰り返している。  
+この調子だと25年の問題ってやったとしても意味が内容な気がしてならない。  
+だって、直近の傾向に関係なさそうなんだもん。  
+ということで、25年の問題に関してはitecの参考書を読むだけで済ませることにします。  
+それで知識と考え方だけ抽出できればいいなって思いました。  
+
+``` txt 30分 : 9/10
+190 × 191
+エ
+
+192.168.0.12
+e2
+OUT
+ANY
+22
+IN
+
+認証サーバ
+
+ウ
+
+---
+
+[1]
+図2「変更後のM社のネットワーク構成」より制作一課PCへのIPアドレス割当て範囲は 192.168.1.64～192.168.1.254 とわかります。
+サブネットマスクは255.255.255.0なので下位8ビットがホストアドレス部です。下位8ビットのうち"0～63"までの64個と"255"は使用できないため、2^8＝256個から上記65個を減じた191個が割当て可能なホストアドレス数です。
+
+∴191
+
+
+[3]
+M社のネットワークでは各課のPCがサプリカント、スイッチがオーセンティケータに相当します。しかし認証サーバを担う機器は存在しないため新たに導入する必要があります。
+
+∴認証サーバ
+
+
+[4]
+
+表2より毎日のバックアップが必要な最大量は、
+制作一課用FS…10Gバイト
+制作二課用FS…5Gバイト
+制作三課用FS…15Gバイト
+M社全体では30Gバイトになります。
+
+30Gバイトのデータを90分以内に転送するために最低限必要な帯域は、
+
+　(30Gバイト＝240Gビット，90分＝5,400秒)
+
+　240÷5,400＝0.04444≒44(Mビット／秒)
+
+さらに転送効率が80%なので、
+
+　44÷0.8＝55(Mビット／秒)
+
+したがって約55Mビット／秒を上回り、かつ最も小さい60Mビット／秒が正解です。
+
+∴ウ：60Mビット／秒
+
+30Gバイト
+240Gビット / 
+3600 + 1800
+
+30Mビット/s
+
+```
+
+---
+
 ## データベース 旅客船Web予約システムの構築
 
 いえーい100点。  
