--- a/AppliedInformation/午後/H27A.md
+++ b/AppliedInformation/午後/H27A.md
@@ -6,6 +6,101 @@
 
 ---
 
+## ネットワーク ネットワークの設計
+
+うーん。もう一つ正解したかった。  
+アドレスの数は間違っていなかったと思うのだが・・・  
+いや、間違えてたわ。ﾌｧｰｰｗｗｗ  
+でも、まぁ考え方は合ってたか。ビットの計算を間違えてた。  
+
+まぁ、余裕を持って考えられるようになってきたので、進歩は感じている。  
+しっかり復習して次に生かす。  
+
+``` txt : 29分 6/10
+507 × 508
+
+ファイルサーバ
+PC
+
+192.168.1.11 × 192.168.1.0
+255.255.254.0
+192.168.4.3
+
+インターネットVPN × 広域イーサネット
+グループウェアサーバーへのIP接続が必要なため × 遅延が少なくテレビ会議機能に適しているから
+事業所とデータセンターで別々の業者で回線を契約する 100%
+他)事業所とデータセンタでは異なる回線事業者と契約する
+イ
+
+---
+
+[1][1]
+本文中に「事務所2のPCには 192.168.12.0/23 からIPアドレスを割り当てる」とあります。
+アドレスプレフィックスが23なのでネットワーク部は先頭から23ビット、ホストアドレス部は残り9ビットになります。
+9ビットで表現できるビット列の組合せ数は 2^9＝512 ですが、以下の4つは割当て済み、またはホストアドレスとして使用できないアドレスためPCに割り当てられません。
+ルータCの⑧ポートのアドレス：192.168.12.1
+事務所2内のPC側セグメントのL2SWアドレス：192.168.12.2
+ネットワークアドレス：192.168.12.0
+ブロードキャストアドレス：192.168.13.255
+したがってPCに割当て可能なアドレス数は512から上記の4つを除いた508個になります。
+
+∴508
+
+→
+255 + 256 = 511 509
+ループバック、ブロードキャスト、ルーター、L2SWの4つを抜かして507
+
+0000110|0 0000 0000
+1 2 4 8 16 32 64 128
+
+0から数えたら最大値は255だけど、0を含めた総数は256。
+で、この場合は総数で数えないといけないので、256であるべき。
+そういうことやぞ。
+
+
+[3][1]
+図2「W社の新たなネットワーク構成」より、ネクストホップに設定されている192.168.4.1はルータAの広域イーサネット側のポート(③)とわかります。
+つまりデータセンタ内のルータBは、宛先IPアドレスとサブネットマスクの論理積(AND)をとったものがaと一致するパケットを受信すると事務所1に転送するということです。
+事務所1内にはルーティングテーブル1行目で設定されている192.168.0.0/24と、サーバ群が配置されている192.168.1.0/24という2つのネットワークセグメントが存在します。
+つまりルーティングテーブルの2行目に設定すべき事務所1を宛先とするもう1つのIPアドレスは「192.168.1.0」になります。
+
+∴a＝192.168.1.0
+
+→
+あー・・。単純にセグメントが0か1の2つあるからって事だけか。
+ファイルサーバーへのアクセスが必要だからって具体的にかいちゃったけど、これは1に属するから1のネットワークを指定するだけでよかったんだ。
+てへぺろ。
+
+
+[3][1]
+広域イーサネットとインターネットVPNの特徴は次の通りです。
+
+広域イーサネット
+回線事業者が提供する閉域ネットワークに接続する。
+イーサネットの名の通りL2レベルで接続するため上位の層のプロトコルがIPに限定されない。
+事業者の回線を使用するため帯域保証などのサービスがある。
+
+インターネットVPN
+IPsecなどのセキュリティプロトコルを利用して公衆回線上にVPNを構築する。
+通信経路にインターネットを利用するため専用線を用いるサービスと比較して安価なことが多い。
+通信品質を保証しないベストエフォート型なのでネットワークが混雑していると通信の遅延が生じることがある。
+
+設問では「事業所間で利用するテレビ会議機能に着目して」と指定されています。
+本文中の「テレビ会議機能は遅延なく良好なレスポンスを確保する必要がある」という記述、
+および2つの方式の特徴から帯域が保証される「広域イーサネット」を主経路にするのが適切と判断できます。
+広域イーサネットは30Mビット／秒の契約で、テレビ会議機能では1つの事務所当たり5Mビット／秒の帯域が使用されます。
+たとえテレビ会議機能を使用したとしても残り20Mビット／秒の帯域があるため、残りの機能(電子メール、グループウェアの利用、ファイル共有)の利用には十分と考えられます。
+
+∴主経路＝広域イーサネット網
+　理由＝遅延が少なくテレビ会議機能に適しているから
+
+→
+これは広域イーサネットとインターネットVPNの通信特性を知っていないとわからない問題だ。  
+てか、IPによる認証って関係なかったのかよって感じでもある。
+```
+
+---
+
 ## データベース 人事情報のデータ構造
 
 いやー、久しぶりに敗北した。  
