--- a/AppliedInformation/午後/H27S.md
+++ b/AppliedInformation/午後/H27S.md
@@ -2,6 +2,74 @@
 
 ---
 
+## ネットワーク DHCPを利用したサーバの冗長化
+
+なんか釈然としない問題だったな。  
+本当にこれでいいのかって感じがすごかった。  
+事実それでよかったっぽいんだけど、それがなんというかって感じなんだよな。  
+DHCPのやり取りはTCPじゃなくてUDP見たいです。  
+これは割と知らなかったのでしっかり復習したいです。  
+
+普通に行けば8問は正解出来た問題だった。  
+そこを詰められるかが勝負といったところか。  
+1問のミス位だったら許容範囲というか、かなり儲けたほうと言っていいのでは無かろうか。  
+
+``` txt : 30分 6/9
+イ
+キ
+エ × オ
+
+ウ、イ
+
+ブロードキャスト
+使用される予定のIPアドレス 0%
+→自身の提案が受け入れられたかどうか
+
+192.168.20.2
+192.168.20.3
+192.168.0.1~192.168.0.254,192.168.20.3,192.168.20.13 × 192.168.20.3,192.168.20.13
+
+---
+
+[1][3]
+DHCPは、クライアント→サーバの通信には67/UDP、サーバ→クライアントの通信には68/UDPを使用します。
+したがってcには「UDP」が入ります。
+
+「なぜUDPが使用されるのか」というと、DHCPのシーケンス中でブロードキャストが使用されるためです。
+TCPはコネクション型で相手との接続を確立してから通信を行う特性があり、不特定多数の相手を宛先とするブロードキャストやマルチキャストができません。
+このためDHCPではUDPが使用されているという訳です。
+
+
+[2][2]
+同じネットワークにDHCPサーバが複数存在する場合はクライアントが送信したDHCP DISCOVERに対して複数のDHCP OFFERが返されます。
+クライアントはこのうち先に受信したものを優先し、受け入れを表明するために、そのDHCP OFFERに含まれる「送信元DHCPサーバのIPアドレス」と「提案されたIPアドレス」を格納したDHCP REQUESTをブロードキャストします。
+DHCP REQUESTを受信したDHCPサーバはパケット内容を確認し、自身の提案が受けれられたならばDHCP ACKで構成情報をクライアントに通知します。
+そうでなければ自身の提案が破棄されたと判断しDHCP REQUESTを無視します。
+要するにDHCPサーバがDHCP REQUESTの内容から判断できることは、自身のDHCP OFFERがクライアントで受理されたかどうかという点です。
+
+
+[3][2]
+ローカルDNSサーバはプロキシサーバ3,4の名前解決を行うためだけに設置され外部ドメインの名前解決を行いません。
+このためWebアクセスを行う際は社内DNSに名前解決を要求する必要があります。
+
+P社ではインターネットの利用を全てプロキシサーバ経由で行っています。
+プロキシサーバを介したWebアクセスでは、代理アクセスを行う際にプロキシサーバがDNSに名前解決要求を行います。
+
+<https://www.ap-siken.com/kakomon/27_haru/img/pm05_9.gif>
+
+図3中でPCからのHTTPリクエストを一旦受け取り、実際にWebアクセスを行うのはプロキシサーバ3および4なので、社内DNSを利用するのはこの2つのサーバになります。
+
+→
+あー・・。あ？
+プロキシサーバーのIPアドレスを取得するのと、プロキシサーバーがWebにアクセスするときに使う2つの意味で答えたのだが、そこまで考える必要はなかったっぽい？
+「PCのWebブラウザでインターネットを利用する際に」
+はい。もうプロキシサーバーの問い合わせは終わった後の話っぽいですね。
+ならプロキシのIPしかないですわ。
+おわり。
+```
+
+---
+
 ## データベース アクセスログ監視システムの構築
 
 特にむずかしさは感じなかったが、細かいところでわからないところはあったのでしっかり詰める。  
