--- a/AppliedInformation/午後/H30A.md
+++ b/AppliedInformation/午後/H30A.md
@@ -10,6 +10,8 @@
 ## ネットワーク Webシステムの負荷分散と不具合対応
 
 LPIC合格したよなぁ？って感じです。  
+nslookupと書こうとしてnetstatとはな。  
+
 すぐに終わったけど、ミスリードしてた。  
 IPの問題は大丈夫だったけど他がダメですね。  
 
@@ -32,6 +34,24 @@ LBによる送信元アドレス書き換え機能 100%
 [2]
 問題をよく見てみれば、どのようなエラーが発生していると考えられるか？なので、何が原因か？と答えるのは全然違うように思われる。
 もっとよく見れば、普通にこたえられる問題だっただけに非常におしい。
+
+
+[2][2]
+不具合の直前に販売管理機能のプログラムをバージョンアップしているので、Webサーバ上で動作するプログラム上の問題であることが想定できます。
+
+表1の記載内容を見ると、pingでの疎通確認、名前解決が正常である一方、項番4には「エラーが表示されたときのWebサーバとPC間におけるHTTP通信メッセージそのものが存在しなかった」とあり、Webサーバが要求を受信してから応答を送信するまでの間にエラーが発生している確率が高いと考えられます。HTTP応答が返ってこない場合、Webブラウザではタイムアウトエラーを表示します。
+さらに、項番6に「WebサーバからDBサーバへのアクセスエラーメッセージがあった」と記載されていることから、WebサーバからDBサーバへのアクセス時にエラーの原因となる不具合が生じていると判断するのが妥当です。
+
+∴WebサーバからDBサーバへのアクセスがエラーとなった
+
+
+[2][3]
+表1の項番6では「TCPポートが確保できない」エラーが記録されており、DBサーバのTCPポートが枯渇してしまっていることがアクセスできない原因であることがわかります。
+
+TIME_WAIT状態とは、TCP通信のシーケンスにおける遷移状態の1つで、本文中に「TCPコネクションが閉じるまでの猶予状態である」と説明されているように接続終了待ちの状態を示します。TIME_WAIT状態のタイムアウト値を短縮することで、使用済みのTCPポートを以前より早く解放するようになります。TCPポートが解放されるまでの時間が短くなれば、他の通信がそのポートを再利用することが可能となります。これにより、Webサーバ1～3で再利用できるTCPポート数が増える改善効果を望めます。
+
+∴Webサーバ1～3で再利用できるTCPポート数を増やせること
+
 
 ```
 
