--- a/AppliedInformation/午後/H30S.md
+++ b/AppliedInformation/午後/H30S.md
@@ -13,6 +13,9 @@
 話は簡単だったので、出来れば正解したかった。  
 部分点くらいはもらえるだろうか。  
 
+AレコードだのNSレコードだの言われても最初はわからなかったけど、Aはアドレスかな？NSはネームサーバーかな？  
+ってあたりを付けたらどうもその通りっぽかったので、そうしたら当たった。  
+
 ``` txt : 29分 8/10
 ラウンドロビン
 IPアドレス
@@ -31,8 +34,38 @@ record_data × owner
 
 ---
 
+NSレコードは、そのドメインのゾーン情報を保持するネームサーバのホスト名を指示するレコードです。
+NSレコードが2つあるということは、DNSラウンドロビンによりマスタとスレーブにアクセスを振り分け、負荷分散と可用性向上を図ろうとする意図があります。
+1つ目にはマスタDNSサーバである「ns.example.co.jp」が指定されているため、2つ目にはB社に設置されたスレーブDNSサーバである「ns-asha.exapmle1.ne.jp」を指定することになります。
+→
+なるほどね。問題文にただ追加しろって書いてあったからその通りにしただけだけど、DNSサーバーも負荷分散のためにそういうあれがあったのか。
+
+
+[3][2]
+DNSの設定上、CNAMEを設定したホスト名は、他のいかなるレコード（AレコードやNSレコードなど）とも重複して設定してはならないというルールがあります。例えば以下のような設定は違反となります。
+www IN A 200.x.y.1
+www IN CNAME hogehoge.com
+マスタDNSサーバのゾーン情報に図4のCNAMEレコードが追加されると、同じ"w3"をownerフィールドとする行番号4のAレコードとの競合が生じます。
+これを解消するために、Webサイトのホスト名である"w3"を変更し、変更後のホスト名でAレコードのownerフィールドを書き換える必要があります。
+
+∴行番号：4
+　フィールド名：owner
+
+→
+結局書き換えた後の値は何になるべきかわからなかったけど、エイリアスと重複したらダメってことだからとりあえずここは絶対に変えるべきって事を言えれば良いだけの問題だったか。
+
+
+[3][3]
+WAFサービスを利用することでA社Webサイトへのアクセスは全てWAFサービスを経由することになります。しかし、（"w3"から変更された）A社WebサイトのURLを指定したり、IPアドレス直打ちしたりすれば外部から直接Webサイト（負荷分散装置及びWebサーバ）へのアクセスができてしまいます。このためWAFサービスを経由しない接続を遮断するためのアクセス制御が必要となります。
+正当なアクセスならば必ずWAFサービスを経由するので、宛先がWebサイトであるアクセスについては送信元がWAFサービスのFQDNになっているものだけを許可するルールをFWに追加することになります。
+
+∴WebサイトへのアクセスをWAFサービスだけから許可する
+
+→
 あぁ、そうか。
 直接アクセスされた場合だけ考えてたけど、WAFからのみ許可して後は不許可にすればいいだけの話か。
+でも、解説にも直接入力の場合～ってあるので、言いたいことは合っているはず。
+部分点くらいはもらえるだろう。
 ```
 
 ---
