--- a/AppliedInformation/午後/H31S.md
+++ b/AppliedInformation/午後/H31S.md
@@ -25,6 +25,34 @@ L3SW
 
 ---
 
+[2][1]
+図2を見ると、来訪エリア全体を4台のAPでカバーする配置になっており、各APのカバーする範囲は一部が重なり合っています。
+
+無線LANネットワークでは、近接するネットワークとの電波干渉を避けるために、使用する周波数帯をネットワークごとに微妙にずらすことが可能になっています。
+このときに設定する値をチャネル(チャンネル)といいます。
+5GHz帯を使用するIEEE802.11acでは19チャネルが使用可能です。
+5GHz帯では、各チャネルの周波数帯は完全に独立しているので、2.4GHz帯のように近接するチャネルを設定しても電波干渉は起きません。
+しかし、近くの無線LANネットワークで同じチャネルが使用されていれば、やはり電波干渉の発生により通信が不安定になる可能性があります。
+
+4台のAPはカバーする範囲が被っているので、電波干渉を避けるためにそれぞれ異なるチャネルを設定する必要があります。
+
+∴4台のAPに，それぞれ異なる周波数チャネルを設定する
+
+→
+4台とわかっているのだからそう書けばよかった。
+どこかでチャネルは5Hzづつずらすなんてのを見つけたからそれに意識を取られた。
+具体的に書く必要はない。それぞれ異なる周波数を設定すればいいだけの話だから。
+
+
+[2][2]
+[c，d]
+通信パケットのVLAN情報はAPで設定されるため、L2SW8のcとdは、VLAN10～50及びVLAN100のどちらの通信も通すようになっていなければなりません。
+
+各ポートに設定されるVLANは、a＝VLAN100、b＝VLAN10～50、cとd＝VLAN10～50及びVLAN100 となります。
+1つのVLANが設定される箇所はa、複数のVLANを設定する箇所はb，c，dです。
+
+
+[3]
 デフォルトゲートウェイはIPレベルで通信できる機器じゃないとだめ。
 L2SWと書いてあったので、残りの選択肢はルーター2しかない。
 ```
