--- a/BookKeeping/用語など.md
+++ b/BookKeeping/用語など.md
@@ -123,7 +123,6 @@
 この差額の1円を代表者につける必要がある。
 けど～～～って話。
 
-
 ---
 
 ## 締め とは？
@@ -271,3 +270,8 @@ ECOの収入原簿印刷のアレ。
 ・dispose : 処分する。使い捨て  
 
 ---
+
+## 退職・就職の際にもらえるお金一覧
+
+![!](https://pbs.twimg.com/media/FJlKSv6aUAE3pe8?format=jpg&name=900x900)  
+<https://twitter.com/namazu9p/status/1484299243099930624?t=iIS9nRMNQ0R7Vxu0HzGhmA&s=09>  
