--- a/Other/技術的参考集.md
+++ b/Other/技術的参考集.md
@@ -17,6 +17,9 @@
 
 [GitHubの機能をフルに使って職務経歴書の継続的インテグレーションを実現する](https://zenn.dev/ryo_kawamata/articles/resume-on-github)  
 
+[「Visual Studio」の中の人が作ったプログラマー向け十徳ナイフ「DevToys」](https://forest.watch.impress.co.jp/docs/news/1382919.html)  
+<https://twitter.com/_inductor_/status/1485571312383049731?t=HneO12g8gQeElaHUCh2Wkg&s=09>  
+
 ## 資格系
 
 [IT資格試験『合格のコツ』と『取組みポイント』　～40超の資格取得経験から～](https://qiita.com/ksj555/items/6ff5598c1429c0bc190a)  
