--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -46,6 +46,19 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 [寝床が暖かくなる毛布の順番](https://weathernews.jp/s/topics/201901/070075/)  
 やっぱり毛布を一番下にするのがベストらしい。
 
+[グサッくる格言](https://twitter.com/kanondaabyefp/status/1482837728492666882?t=Pl5WHNoRZH7ZgAJjILk41Q&s=09)  
+![!](https://pbs.twimg.com/media/FJQZDgqacAEnMnr?format=jpg)  
+
+1. 性格は「顔」に出る  
+2. 生活は「体系」に出る  
+3. 本音は「仕草」に出る  
+4. 美意識は「爪」に出る  
+5. 清潔感は「髪」に出る  
+6. 気配りは「食べ方」に出る  
+7. 芯の強さは「声」に出る  
+8. ストレスは「肌」に出る  
+9. 落ち着きのなさは「足」に出る  
+10. 人間性は「弱者への態度」に出る  
 
 ## ヴィーガン
 
