--- a/AppliedInformation/午後/H29S.md
+++ b/AppliedInformation/午後/H29S.md
@@ -43,6 +43,109 @@ e:インターネット
 
 ---
 
+## ネットワーク レイヤ3スイッチの故障対策
+
+話はわかったがどう答えていいかわからなかったので、確認のために時間がかかった。  
+正答率的には悪くない。  
+長文の問題も正解していた。  
+1つナチュラルに間違ったものがあるのが悔やまれる。  
+
+でも、この年の問題のスレ荒れてるって事は、難しかったって事だよな。  
+というか、この年の合格率低かったような？  
+この問題、アドレスとポートが2つあって、どっちにアクセスしたらどちらに行くみたいなのがわかりきっていないのがなぁ。  
+
+``` txt 30分 9/12 実質10問正解
+イ
+コ
+オ
+エ × カ
+ク
+
+K君のPCから業務サーバーへアクセスができるか確認するため
+各PCの内部にDNSのキャッシュが残っていたから
+
+1
+172.16.2.250
+VLAN20
+
+デフォルトゲートウェイ × デフォルトゲートウェイアドレス
+VLANインターフェースに仮想IPアドレスを設定する × 172.16.1.200
+
+---
+
+[1][4]
+ネクストホップとは、宛先ネットワークに到達するために、次にどの隣接ルータにIPパケットを転送すればよいのかについての情報で、ルーティングテーブルに設定されます。
+
+p1がダウンしたときには、172.16.1.250 からの送出ができないので、代わりにL3SW2を経由してサーバにパケットを届ける必要があります。
+ネクストホップに L3SW2のp10側のIPアドレス 172.16.2.251 を設定することで、PCから発せられたサーバ宛て（宛先 172.16.1.0/24）のパケットはL3SW2に転送されるようになります。
+よってdには 172.16.2.251 が入ります。
+
+問題文の空欄cの後に、「PCによるサーバアクセスは，L3SW1のp10経由で行われる。L3SW1のp1故障時には，・・・」とありますから、
+宛先ネットワークは、サーバが属している172.16.1.0/24です。
+解説にも、「PCから発せられたサーバ宛て（宛先 172.16.1.0/24）のパケットはL3SW2に転送されるようになります。」とあります。
+
+[1][5]
+ICMPリダイレクトは、L3SWやルータが特定のネットワーク宛てのパケットに関してよりよい経路情報を送信元に伝達するために使用されるメッセージです。
+本問のケースで言えば、ネクストホップが設定されたL3SW1は、送信元に対し 172.16.2.251 が適切な転送先である旨のICMPリダイレクトメッセージを返します。
+これを受け取った送信元（PC）は、ICMPリダイレクトを解釈し次からサーバ宛てのパケットを 172.16.2.251（つまりL3SW2）に転送するようになります。
+
+
+[2][1]
+pingはネットワークの疎通（つまり対象ノードと通信可能な状態にあるかどうか）を確認するためのコマンドです。
+J君は自席のPCから業務サーバを利用できたため、障害の原因がK君のPCから業務サーバ間の通信経路にある可能性を考えました。このためJ君は、K君のPCから172.16.1.1 （業務サーバ）に対してpingを送り、K君のPCから業務サーバへの通信経路に問題がないかどうかを確認したのです。
+
+∴業務サーバへの経路に障害があるかどうかを確認するため
+
+→
+メモ
+K君のPCがおかしいのか確かめるため。
+K君のPCからのアクセスが出来ないのか確かめるため。
+そもそもアクセス出来ないのか確かめるため。
+複数の環境に置けるネットワークの状況を確認するため
+
+経路を確認するためか。なるほどね。そうかもね。
+ネットワークの状況って言い方も抽象的すぎか。
+もっと具体的にいうなら経路という概念で表せばよかったってことか。
+
+
+[2][2]
+DNSクライアントが名前解決要求をDNSサーバに送り、DNSサーバは結果をDNSクライアントに返すのがDNSの名前解決の基本動作となりますが、毎回この動作が繰り返されるわけではありません。DNSでは負荷軽減と応答時間短縮のためにキャッシュと呼ばれる仕組みによって手順を簡略化できるようになっています。キャッシュには名前解決で行った問合せの結果が一定時間保存されており、ローカルに有効期限内のキャッシュがある場合、DNSクライアントはその情報を再利用することで再度問合せを行わずに済むようになっています。その後、時間が経過しキャッシュの有効期限が切れると、DNSクライアントはDNSサーバに名前解決要求を行います。
+
+たとえDNSサーバと通信できない状態でも、キャッシュがローカルPCに残っている間はそのキャッシュが使用されるため名前解決自体は問題なく行われます。しかし、キャッシュの有効期限が過ぎると、再度DNSサーバへの問合せが行われます。この時点でDNSサーバと通信できないと名前解決ができず、他のサーバとの通信もできなくなってしまいます。本問では時間が経つに連れてサーバ群を利用できない社員が増えていますが、キャッシュが切れた順に障害に陥ったのだと解釈できます。
+
+つまり、DNSサーバが利用できなくても、サーバ群の利用を正常に行えている社員がいるのは「その社員のPCにDNSキャッシュが残っているから」です。
+
+∴PCにDNSのキャッシュが残っているから
+
+
+[3]
+OSPFが動作しているネットワークでは、通信障害が起こると自動でルーティングテーブルが再構成されます。
+
+L3SW1のp1がダウンすると、PCからサーバ群への経路情報は以下のように変わります。
+
+<https://www.ap-siken.com/kakomon/29_haru/img/pm05_4.gif>
+
+L3SW1のルーティングテーブルのうちサーバ群（172.16.1.0/24）への経路情報を保持しているのは項番1ですのでこれの変更が必要です。
+p1のダウン後に、L3SW1の内部ルータが172.16.1.0/24宛てのパケットを受け取った場合、L3SW2に転送するためにp10から送出することになります。
+このとき、L3SW1がパケット送出するVLANインタフェースは 172.16.2.250、そのVLANインタフェース(p10)が属するVLAN名はVLAN20ですので、これらを項番1に設定することになります。
+
+
+[4]
+VRRP(Virtual Router Redundancy Protocol)は、ネットワークのデフォルトゲートウェイとなるルータやL3スイッチの冗長構成を実現するプロトコルです。
+
+VRRPでは複数台のルータに共通して使える仮想IPアドレス・仮想MACアドレスを用意し、障害発生時には2つのアドレスをフェールオーバで待機系に引き継ぎ処理を継続します。
+この仕組みによってホストのデフォルトゲートウェイの設定値などを変更することなしに、送信先の装置を自動で正常稼働するものに置き換えることが可能になっています。
+
+本文中の「PC及びサーバは，パケットを仮想IPアドレスに向けて送信することによって…」の説明から、VRRPを機能させるためにはPC及びサーバの送信先が仮想IPアドレス宛てになっていなければならないことがわかります。
+図1及び図2ではサーバ群のデフォルトゲートウェイアドレスはL3SW1のサーバ側インタフェースである 172.16.1.250 に設定されていますので、これをVRRPグループのうちサーバ側（VRRPグループ1）の仮想IPアドレスである 172.16.1.200 に置き換えることになります。
+
+∴(1)デフォルトゲートウェイアドレス
+　(2)172.16.1.200
+
+```
+
+---
+
 ## データベース 稟議申請システム
 
 「ユーザー」か「ユーザ」か気を付ける事。  
