25年ネットワーク

--- a/AppliedInformation/午後/H25A.md
+++ b/AppliedInformation/午後/H25A.md
@@ -160,6 +160,58 @@ a.co.jp : ドメイン名 → ホスト名+ドメイン名 = FQDN
 
 ---
 
+## ネットワーク ネットワーク障害調査
+
+難しい問題と聞いたのでやってみたが、特に難しいとは感じなかった。  
+と、いいつつ、2つ全然わからない奴があったのでそれだけしっかり復習する。  
+それ以外は全部わかったので、問題ない。  
+
+``` txt : 30分 9/11
+172.16.1.1
+172.16.1.252
+172.16.0.101
+25
+
+オ
+エ
+プロキシサーバ
+DNSサーバー
+
+ルーターが同じネットワークに属していない ×
+→調達部FSのデフォルトゲートウェイ
+調達部FSのIPアドレスが間違っている
+→調達部FSのネットマスク
+
+ブラウザからのアクセスはDMZ経由になるのでFWでブロックされる 0%
+→プロキシサーバー経由でFSにアクセスしようとしたから
+
+---
+
+[3]
+問題の切り分けについては以下の4点に着目します。
+1. 調達部PCから調達部FSにアクセスできているため、調達部FSのIPアドレスは適切に設定されている
+2. tracerouteの引数は調達部FS"172.16.1.253"を指している
+3. tracerouteのパケットは調達部ルータまで届いている
+4. ネットワーク機器は適切に設定されており、障害も発生していない
+
+以上より、tracerouteのパケットは調達部ルータによって適切に配送され、調達部FSに到達していると考えるのが妥当です。
+つまりタイムアウトの原因は調達部FSから送出される応答パケットにあると判断できます。
+調達部FSに設定した項目のうち、この問題の原因として考えられるのは「ネットマスク」「デフォルトゲートウェイ」の設定です。
+もしデフォルトゲートウェイが誤っていれば調達部ルータに応答パケットが届きません。
+またネットマスクの誤りでは「送信元の総務部PCが同じネットワーク内の機器である」と誤認識して、応答パケットを調達部ネットワーク内に送出してしまっている可能性が考えられます。
+
+[4]
+図2のPCへの設定ガイドでは、プロキシの例外設定が「なし(全てのURLにプロキシサーバを利用)」となっています。
+この設定があるため、PCのWebブラウザからFSにアクセスすると、そのリクエストはプロキシサーバに送られます。プロキシサーバは、FSに代理アクセスしようとしますが、P社では「インターネットやDMZから各部のFSにアクセスできないようにファイアウォールを設置している」ので、DMZ上のプロキシサーバからFSへの通信はファイアウォールで遮断されてしまいます。この状態ではPCにはレスポンスが返ってきません。
+
+つまり、FSの利用状況確認ページが表示されなかったのでは、プロキシサーバ経由でのアクセスがファイアウォールで遮断されるからです。
+
+∴プロキシサーバ経由でFSにアクセスしようとしていたから
+
+```
+
+---
+
 ## 組み込みシステム ネットワークを使用するインターホンの設計
 
 本当は8問正解だが、言いたいことはほぼ合っているので実質9問正解でいいだろう。  
