たわいもないこと

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -707,3 +707,20 @@ avalon peninsula canada
 
 ・クエリエラー調査
 DISTINCTとワイルドカード `*` を併用したら.NETFrameworkで実行速度が遅くなるらしい
+
+
+
+30分早く寝るだけでこんなに違うとは思わなかった。
+素晴らしい。
+これから23時半には寝るようにします!!!
+
+
+エンジンスターターの電池が切れた。
+精密ドライバーも必要。
+会社にいる間に解決しないと長引きそうだったので頑張った。
+ドライバーは部長の隣にあった。
+昼休みに散歩がてらツルハに電池を買いに言った。
+5分で行けることを知った。
+ハサミも貸してもらって昼休み中に完了。
+
+
