情報システム開発6問

--- a/AppliedInformation/午後/H29A.md
+++ b/AppliedInformation/午後/H29A.md
@@ -292,3 +292,51 @@ pm07_5.gif/image-size:400×118
 ∴電源投入後、システム時刻の設定が完了するまでの間に衝撃を検出した場合
 
 ```
+
+---
+
+## 情報システム開発 ソフトウェア適格性確認テスト
+
+この問題は覚えているぞ。  
+覚えているけど、正解できるかは別だな。  
+ちゃんと正解出来ていれば100点だが、適切な回答が出来ない場合はダメだ。  
+全部わかったので復習することはないが、こうやって間違えたって備忘録は残しておく必要がある。  
+
+このテストでよかったのは、昔と比べてテキパキと論理式を書いて結論をまとめられたことだろうか。  
+昔ならグダグダ説明してた気がする。  
+
+``` txt
+(100,100),(60,100),(60,70),(100,30)
+
+30
+250
+
+ENGLISH × ENGLISHの境界値チェック
+141
+129
+(オ,1) × (ウ,160),(オ,1),(ケ,190)
+
+条件2だけを満たす条件1と条件5はあり得ないから 100%
+他)条件1が偽，条件2が真，条件5が偽となる場合が成立しないから 
+
+---
+
+[2]
+条件4を通過する下限、例えば「WRIRREN:130、かつ、ORAL_tec:4」や、「WRIRREN:160、かつ、ORAL_tec:3」の場合は、WRIRREN＋m×ORAL_tecの値がnと等しくなるはずです。
+
+これを利用した連立方程式を立ててmとnを求めます。
+
+　130＋4m＝n …①
+　160＋3m＝n …②
+
+加減法により、
+
+　-30＋m＝0
+　m＝30 …③
+
+③の結果を①の式に代入します。
+
+　130＋4×30＝n
+　n＝250
+
+```
