--- a/AppliedInformation/午後/H31S.md
+++ b/AppliedInformation/午後/H31S.md
@@ -198,3 +198,32 @@ pm07_7.gif/image-size:455×65
 ```
 
 ---
+
+## 情報システム開発 Webサイトの開発
+
+めちゃ簡単だった。  
+間違えたところもpxの付け忘れとか、imagesとimageの違いとか、よく確認せずに書いた事なので、これはスルーしてくれ。  
+長文等も全部正解したし、悩むことも無かったので特に解説もいらない。  
+一番最初のスクリーンサイズ毎に切り替える手法が思いつかなかったけど、突然「レスポンシブデザイン」という言葉を思い出した。  
+teela開発でやったはずだったので、それのたわものだなと思った。  
+
+``` txt 17分 : 7/10 実質100点
+レスポンシブデザイン
+他)レスポンシブWebデザイン
+
+HTML
+オ
+キ
+
+デバイス毎にファイルを1から全て作る必要があるため
+他)デバイスごとのHTMLファイルを開発する必要があるから
+
+768 × 768px
+1023 × 1023px
+/images/topimages_w768.jpg × /images/topimage_w768.jpg
+no-repoeat
+
+画像の読み込みによる遅延防止のため 100%
+他) 画像表示の遅延を防ぐため
+
+```
