按分、縦横変換、分数表示

--- a/BookKeeping/用語など.md
+++ b/BookKeeping/用語など.md
@@ -104,24 +104,29 @@
 
 ## 按分
 
-「按分（あんぶん）」とは、「基準値をもとに物品や金銭を分けること」です。  
+>「按分（あんぶん）」とは、「基準値をもとに物品や金銭を分けること」です。  
 
+[「按分」とは？確定申告の際に必要な計算方法についても解説](https://www.saisoncard.co.jp/credictionary/bussinesscard/article266.html#:~:text=%E3%82%82%E6%A5%BD%E3%81%AB%E3%81%AA%E3%82%8B%EF%BC%81-,%E3%80%8C%E6%8C%89%E5%88%86(%E3%81%82%E3%82%93%E3%81%B6%E3%82%93)%E3%80%8D%E3%81%A8%E3%81%AF%E5%89%B2%E3%82%8A%E6%8C%AF%E3%82%8B%E3%81%93%E3%81%A8%E3%82%92%E6%84%8F%E5%91%B3,%E3%82%82%E6%8C%89%E5%88%86%E3%81%AE%E8%80%83%E3%81%88%E6%96%B9%E3%81%A7%E3%81%99%E3%80%82)  
+>「按分(あんぶん)」とは割り振ることを意味する
+>按分のそもそもの意味は、物品や金銭などを基準を用いて割り振ることです。  
+>確定申告だけでなく、日常の中でも実情に合った数値を算出して、割り振りをしたいシーンで按分が用いられます。  
+>
+>例えば、食事代金を食べた量に応じて割り振るというのも按分の考え方です。  
+>4人の食事代金が2,000円で、取り皿に盛った回数がAさん1回、Bさん1回、Cさん2回、Dさん1回である場合、取り皿に盛った回数を基準として按分計算を行うと、Aさんが400円、Bさんが400円、Cさんは800円、Dさんが400円支払うことになります。  
+>単純に割り勘で支払うよりも、実情に近い支払いができます。  
+
+福田さん曰く  
 100%仕事用に軽トラ買った。  
 でも50%、遊びに使ってしまった。  
 そしたら50%分を割り返して、その分の税金を収めるみたいな感じで使うらしい。  
 
-人単位で消費税。
-人単位で消費税。
-それを合計方式で許可もらった。
-2.23が根拠ではある。
+RN3に置ける按分は全体の金額で消費税を求めたときと、プレーヤー毎に消費税を求めて合算した場合の差額の伝票を代表者に差し込むことをいうらしい。  
+全然割り返しの概念に即していないことを按分と読んでいる模様。  
 
-3.0では按分はない。
-だからこうなるらしい。
-
-全体で合計した場合は1467。
-人で合計した場合は1466。
-この差額の1円を代表者につける必要がある。
-けど～～～って話。
+例)  
+全体で合計した場合の消費税合計は1467円。  
+プレーヤー毎に消費税を算出して合計すると1466円。  
+この差額の1円を代表者につけるのが按分処理らしい。  
 
 ---
 
